--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -399,7 +399,7 @@
       "[INFO] preparing model...\n",
       "[INFO] training model...\n",
       "Epoch 1/5\n",
-      "441/850 [==============>...............] - ETA: 9:52 - loss: 0.8099 - accuracy: 0.5844"
+      "519/850 [=================>............] - ETA: 8:03 - loss: 0.7897 - accuracy: 0.5908"
      ]
     }
    ],
@@ -427,20 +427,6 @@
     "import tensorflow as tf\n",
     "from tensorflow.python.keras.engine import data_adapter\n",
     "\n",
-    "# let me load the data in a different manner\n",
-    "# image_path = \"/Users/andrei/Ryerson/neuralNet_EE8204/codeTests/resnet/hateful_nothateful_images/validation/hateful/95640.png\"\n",
-    "# image = load_img(image_path, target_size=(224, 224))\n",
-    "# input_arr = img_to_array(image)\n",
-    "# #input_arr = np.array([input_arr])\n",
-    "# print(input_arr.shape)\n",
-    "# exit()\n",
-    "# construct the argument parser and parse the arguments\n",
-    "#ap = argparse.ArgumentParser()\n",
-    "#ap.add_argument(\"-p\", \"--plot\", type=str, default=\"plot.png\",\n",
-    "#                help=\"path to output loss/accuracy plot\")\n",
-    "#args = vars(ap.parse_args())\n",
-    "# determine the total number of image paths in training, validation,\n",
-    "# and testing directories\n",
     "totalTrain = len(list(paths.list_images(train_path)))\n",
     "totalVal = len(list(paths.list_images(validation_path)))\n",
     "totalTest = len(list(paths.list_images(test_path)))\n",
@@ -467,7 +453,6 @@
     "valAug.mean = mean\n",
     "\n",
     "\n",
-    "# initialize the training generator\n",
     "print(\"initializing the training generator\")\n",
     "trainGen = trainAug.flow_from_directory(\n",
     "    train_path,\n",
@@ -476,10 +461,6 @@
     "    color_mode=\"rgb\",\n",
     "    shuffle=True,\n",
     "    batch_size=batch_size)\n",
-    "# by the looks of it the train gnerator returns a dictinaryiterator [x,y] whre x is the batch and\n",
-    "# y is the labels\n",
-    "# print(len(trainGen.next()[1]))\n",
-    "# initialize the validation generator\n",
     "print(\"initializing the val generator\")\n",
     "valGen = valAug.flow_from_directory(\n",
     "    validation_path,\n",
@@ -498,14 +479,10 @@
     "    shuffle=False,\n",
     "    batch_size=1)\n",
     "\n",
-    "\n",
-    "# load the ResNet-50 network, ensuring the head FC layer sets are left\n",
-    "# off\n",
     "print(\"[INFO] preparing model...\")\n",
     "baseModel = ResNet152(weights=\"imagenet\", include_top=False,\n",
     "                      input_tensor=Input(shape=(224, 224, 3)))\n",
-    "# construct the head of the model that will be placed on top of the\n",
-    "# the base model\n",
+    "\n",
     "headModel = baseModel.output\n",
     "headModel = AveragePooling2D(pool_size=(7, 7))(headModel)\n",
     "headModel = Flatten(name=\"flatten\")(headModel)\n",
@@ -513,12 +490,8 @@
     "headModel = Dense(256, activation=\"relu\")(headModel)\n",
     "headModel = Dropout(0.5)(headModel)\n",
     "\n",
-    "headModel = Dense(len(config['BaseConfig']['classes']), activation=\"softmax\")(headModel)  # this is my softmax layer for output\n",
-    "# place the head FC model on top of the base model (this will become\n",
-    "# the actual model we will train)\n",
+    "headModel = Dense(len(config['BaseConfig']['classes']), activation=\"softmax\")(headModel)\n",
     "model = Model(inputs=baseModel.input, outputs=headModel)\n",
-    "# loop over all layers in the base model and freeze them so they will\n",
-    "# *not* be updated during the training process\n",
     "\n",
     "for layer in baseModel.layers:\n",
     "    layer.trainable = False\n",
